# Meme

./: .gitignore  README.md  README.zh-CN.md  ROADMAP.md  install.sh  meme  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yaml  publish.yaml  publish.yml
docs/: README.zh-CN.md  architecture.md  contributing.md
hooks/: query.sh  session_start.sh
meme/: __init__.py  core.py
meme/hooks/: query.sh  session_end.sh  session_start.sh
src/meme/: __init__.py  __main__.py  cli.py  config.py  constants.py  core.py  log.py  models.py  utils.py  vault.py
src/meme/commands/: __init__.py  ingest.py  lifecycle.py  links.py  maintenance.py  memory.py  setup.py  system.py
src/meme/hooks/: query.sh  session_end.sh  session_start.sh
templates/: MEMORY.md
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_graph.py  test_hooks.py  test_utils.py  test_vault.py
