[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memectl"
version = "0.2.3"
description = "A centralized, tiered memory system with knowledge graph for AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "requests",
    "keyring",
    "cryptography",
    "tomli>=1.2.0",
    "pyobjc-framework-localauthentication>=12.1",
    "pyobjc-framework-security>=12.1",
]

[project.scripts]
meme = "meme.core:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
