[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memectl"
version = "0.2.3"
description = "A centralized, tiered memory system with knowledge graph for AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "requests",
    "keyring",
    "cryptography",
    "pyobjc-framework-localauthentication>=12.1",
    "pyobjc-framework-security>=12.1",
]

[project.scripts]
meme = "meme.core:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.6.0",
    "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "mypy>=1.0",
    "ruff>=0.6.0",
    "black>=24.0",
]

# ========================================
# Code Quality
# ========================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = [
    ".venv",
    "__pycache__",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]
